@@ -52,6 +52,7 @@ static PyObject *ssl_set_tmp_rsa_cb_func;
 %include _util.i
 %include _ec.i
 %include _engine.i
+%include _objects.i
 
 #ifdef SWIG_VERSION
 %constant int encrypt = 1;
